fcdev 0.9.0: released from this repo; the native binary fetches the function host on first use; Java older than 25 is a warning, not a crash
Spec docs/spec/fcdev-release-0.9.md (owner, 2026-09-24).

- VERSION 0.9.0; UpgradeCommand.DEFAULT_REPO = flowcatalyst/flowcatalyst-javalin.
- scripts/release.sh kind dev (fcdev/vX.Y.Z), make release-fcdev BUMP=…;
  release-fcdev.yml fails when the tag and VERSION disagree; the stale
  tag-ownership and no-remote call-outs replaced/removed.
- Native fcdev start with functions on and no host jar: fetches
  fc-fnhost.jar from its OWN release (fcdev/v<version>), checksum required,
  stored beside the binary or in the data dir cache; any failure is one
  Disabled warning and start carries on. Result<Path, FetchError(Offline |
  NoRelease | NoChecksum | ChecksumMismatch)>. fcdev upgrade's host-jar
  fetch now requires the checksum too.
- A java below 25 (or of undeterminable version) is Disabled naming the
  path and version, before spawning (java.specification.version from
  -XshowSettings:properties).

Built by the Sonnet coder; reviewed by the orchestrator (own mutant: the
minimum lowered to 21 — killed). fcdev 254.

Co-Authored-By: Claude Opus 5.5 (1M context) <noreply@anthropic.com>